syntax ="proto3";
package GreetPb;
option go_package="/GreetPb";

message GreetEveryoneRequest{
  string firstname =1;
}

message GreetEveryoneResponse{
string result =1;
}


service GreetService{
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};
}